implement initial routing and home page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <app-nav></app-nav>
-<button (click)="createUser()">Create User</button>
+<router-outlet></router-outlet>
+<!-- <button (click)="createUser()">Create User</button>
 <p>
   <button (click)="downloadPDF()">PDF download</button>
 </p>
+<p>
+  <input type="file" (change)="onUpload($event)">
+  <img *ngIf="image" [src]="image" alt="">
+</p> -->
 <app-products></app-products>
