feat: netlify config

--- a/src/app/shared/components/product/product.component.html
+++ b/src/app/shared/components/product/product.component.html
@@ -6,7 +6,7 @@
 </a>
 <p>{{ product.price | currency }}</p>
 <h2>{{ product.title }}</h2>
-<p>{{ product?.taxes | currency }}</p>
+<p>{{ product.taxes | currency }}</p>
 <p appHighlight>{{ product.description }}</p>
 
 <!-- <button (click)="onShowDetail()">Show detail</button> -->
